fix invisible div

--- a/app.css
+++ b/app.css
@@ -116,7 +116,9 @@
 #status {
   text-align: center;
   width: 300px;
-  height: 250px;
+  /*height: 250px;*/
+  position: absolute;
+  padding-top: 10px;
 }
 
 #buttons {
@@ -131,7 +133,4 @@
   height: 100px;
 }
 
-#status {
-  position: absolute;
-  padding-top: 10px;
 }
